<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>SynchronousGrab</class>
 <widget class="QDialog" name="SynchronousGrab">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>912</width>
    <height>486</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>SynchronousGrab</string>
  </property>
  <widget class="QPushButton" name="m_ButtonStartStop">
   <property name="geometry">
    <rect>
     <x>10</x>
     <y>300</y>
     <width>211</width>
     <height>71</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <pointsize>9</pointsize>
    </font>
   </property>
   <property name="text">
    <string>Acquire Single Image</string>
   </property>
  </widget>
  <widget class="QLabel" name="m_LabelStream">
   <property name="geometry">
    <rect>
     <x>230</x>
     <y>10</y>
     <width>471</width>
     <height>358</height>
    </rect>
   </property>
   <property name="text">
    <string/>
   </property>
  </widget>
  <widget class="QListWidget" name="m_ListBoxCameras">
   <property name="geometry">
    <rect>
     <x>10</x>
     <y>10</y>
     <width>211</width>
     <height>231</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <pointsize>9</pointsize>
    </font>
   </property>
  </widget>
  <widget class="QListWidget" name="m_ListLog">
   <property name="geometry">
    <rect>
     <x>10</x>
     <y>390</y>
     <width>891</width>
     <height>91</height>
    </rect>
   </property>
  </widget>
  <widget class="QLabel" name="CurrentParametersSynchro">
   <property name="geometry">
    <rect>
     <x>10</x>
     <y>250</y>
     <width>211</width>
     <height>41</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <pointsize>8</pointsize>
    </font>
   </property>
   <property name="text">
    <string/>
   </property>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
